feat(api): Define operations on collections
